--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
     color: #555;
     box-shadow: 0 0 10px rgba(255, 192, 203, 0.7);
     transition: opacity 0.5s ease;
+    user-select: none;
   }
   #controls {
     display: flex;
@@ -85,7 +86,7 @@
     margin-bottom: 1rem;
     user-select: none;
   }
-  button {
+  button, select {
     background: #ff69b4;
     border: none;
     border-radius: 22px;
@@ -97,15 +98,11 @@
     box-shadow: 0 3px 8px rgba(255, 105, 180, 0.5);
     transition: background 0.3s ease;
   }
-  button:hover {
+  button:hover, select:hover {
     background: #ff1493;
   }
   select {
-    font-size: 1rem;
     padding: 6px 10px;
-    border-radius: 10px;
-    border: 1px solid #ccc;
-    cursor: pointer;
   }
   #toTopBtn {
     position: fixed;
@@ -129,41 +126,38 @@
     opacity: 1;
     pointer-events: auto;
   }
-
-  /* Рисовалка */
+  #drawingArea {
+    margin: 1rem auto 2rem;
+    max-width: 700px;
+    text-align: center;
+  }
   #canvas {
     border: 2px solid #ff69b4;
-    border-radius: 12px;
-    display: block;
-    margin: 0 auto 1rem auto;
+    border-radius: 10px;
     touch-action: none;
   }
-
-  /* Цвета */
   .color-btn {
     width: 28px;
     height: 28px;
     border-radius: 50%;
     border: 2px solid transparent;
     cursor: pointer;
-    box-shadow: 0 0 3px rgba(0,0,0,0.2);
-    transition: border-color 0.3s ease;
+    display: inline-block;
+    margin: 3px;
+    box-shadow: 0 0 5px rgba(0,0,0,0.2);
+    transition: border-color 0.3s;
   }
   .color-btn.selected {
-    border-color: #ff1493;
+    border-color: #fff;
+    box-shadow: 0 0 8px 2px #ff69b4;
   }
   #colorPalette {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 8px;
     margin-bottom: 10px;
   }
-  #undoRedoControls {
-    display: flex;
-    justify-content: center;
-    gap: 12px;
-    margin-bottom: 12px;
+  label {
+    font-weight: 600;
+    margin-right: 6px;
+    user-select: none;
   }
 </style>
 </head>
@@ -214,6 +208,8 @@
   <div id="controls">
     <button id="barkBtn" title="Гав-гав!">Гав-гав!</button>
     <button id="meowBtn" title="Мяу от Юкки">Мяу от Юкки</button>
+    <button id="hintBtn" title="Что нарисовать?">Что нарисовать?</button>
+    <button id="clearBtn" title="Очистить рисунок">Стереть всё</button>
 
     <select id="languageSelector" title="Выбери язык">
       <option value="ru" selected>Русский</option>
@@ -230,22 +226,21 @@
     <button id="musicToggle" title="Включить/выключить музыку">🔊</button>
   </div>
 
-  <canvas id="canvas" width="700" height="400" title="Рисовалка Юкки"></canvas>
-
-  <div id="colorPalette"></div>
-
-  <label for="thicknessSelect">Толщина кисти:</label>
-  <select id="thicknessSelect" title="Выбери толщину кисти">
-    <option value="2">2 px</option>
-    <option value="4" selected>4 px</option>
-    <option value="6">6 px</option>
-    <option value="8">8 px</option>
-    <option value="12">12 px</option>
-  </select>
-
-  <div id="undoRedoControls">
+  <div id="drawingArea">
+    <div id="colorPalette"></div>
+    <label for="thicknessSelect" id="thicknessLabel">Толщина кисти:</label>
+    <select id="thicknessSelect" title="Выбери толщину кисти">
+      <option value="2">2 px</option>
+      <option value="4" selected>4 px</option>
+      <option value="6">6 px</option>
+      <option value="8">8 px</option>
+      <option value="12">12 px</option>
+    </select>
+    <br/>
+    <canvas id="canvas" width="680" height="400" style="touch-action:none;"></canvas>
+    <br/>
     <button id="undoBtn" title="Отменить (←)">←</button>
-    <button id="redoBtn" title="Вперёд (→)">→</button>
+    <button id="redoBtn" title="Повторить (→)">→</button>
   </div>
 
   <button id="toTopBtn" title="Наверх">🠕</button>
@@ -273,22 +268,37 @@
       },
       facts: [
         "Народилась 1 березня 2021 року.",
-        "У неї карі очі.",
-        "Пухнастий хвіст із білою китичкою на кінці.",
-        "Знає команди: сидіти, лежати, дати п'ять, на добраніч, в засаді, атакуй, дай лапу, служити.",
-        "Любить гуляти в комбінезоні.",
-        "Уміє відкривати фантики цукерок, де ховають смаколики.",
-        "Дуже розумна і швидко навчається.",
-        "Обожнює гратися з улюбленою іграшкою — їжачком.",
-        "Іноді сором’язлива, але дуже добра і лагідна."
+        "У неё карие глаза.",
+        "Пухнастый хвост с белой кисточкой на конце.",
+        "Знает команды: сидеть, лежать, дать пять, спокойной ночи, в засаде, атакуй, дай лапу, служить.",
+        "Любит гулять в комбезе.",
+        "Умеет открывать фантики конфет, где прячут вкусняшки.",
+        "Очень умная и быстро учится.",
+        "Обожает играть с любимой игрушкой — ёжиком.",
+        "Иногда застенчивая, но очень добрая и ласковая."
       ],
       buttons: {
         bark: "Гав-гав!",
         meow: "Мяу от Юкки",
         day: "День",
         night: "Ночь",
-        pink: "Розовая"
-      }
+        pink: "Розовая",
+        thicknessLabel: "Толщина кисти:",
+        hint: "Что нарисовать?",
+        clear: "Стереть всё"
+      },
+      drawHints: [
+        "Попробуй нарисовать: даёт лапу",
+        "Попробуй нарисовать: сидит",
+        "Попробуй нарисовать: с игрушкой",
+        "Попробуй нарисовать: улыбается",
+        "Попробуй нарисовать: с конфетой",
+        "Попробуй нарисовать: в шапке",
+        "Попробуй нарисовать: на прогулке",
+        "Попробуй нарисовать: хвост с кисточкой",
+        "Попробуй нарисовать: в очках",
+        "Попробуй нарисовать: у ёлки"
+      ]
     },
     uk: {
       greeting: "Привіт! Я Юккі — наймиліша чихуахуа! 💖",
@@ -318,8 +328,23 @@
         meow: "Мяу від Юккі",
         day: "День",
         night: "Ніч",
-        pink: "Рожева"
-      }
+        pink: "Рожева",
+        thicknessLabel: "Товщина пензлика:",
+        hint: "Що намалювати?",
+        clear: "Очистити все"
+      },
+      drawHints: [
+        "Спробуй намалювати: дає лапу",
+        "Спробуй намалювати: сидить",
+        "Спробуй намалювати: з іграшкою",
+        "Спробуй намалювати: усміхається",
+        "Спробуй намалювати: з цукеркою",
+        "Спробуй намалювати: у шапці",
+        "Спробуй намалювати: на прогулянці",
+        "Спробуй намалювати: хвіст із китичкою",
+        "Спробуй намалювати: в окулярах",
+        "Спробуй намалювати: біля ялинки"
+      ]
     },
     en: {
       greeting: "Hi! I'm Yukki — the cutest Chihuahua! 💖",
@@ -349,113 +374,162 @@
         meow: "Meow from Yukki",
         day: "Day",
         night: "Night",
-        pink: "Pink"
-      }
+        pink: "Pink",
+        thicknessLabel: "Brush thickness:",
+        hint: "What to draw?",
+        clear: "Clear all"
+      },
+      drawHints: [
+        "Try to draw: give paw",
+        "Try to draw: sitting",
+        "Try to draw: with toy",
+        "Try to draw: smiling",
+        "Try to draw: with candy",
+        "Try to draw: wearing hat",
+        "Try to draw: on a walk",
+        "Try to draw: tail with tip",
+        "Try to draw: wearing glasses",
+        "Try to draw: near the Christmas tree"
+      ]
     }
   };
 
-  const drawHints = {
-    ru: [
-      "сидит",
-      "лежит",
-      "смотрит в камеру",
-      "дает лапу",
-      "стоит",
-      "стоит на 2 лапах",
-      "лежит на спинке",
-      "только силуэт",
-      "Юкки в комбинезоне",
-      "на фоне ёлки",
-      "на снегу"
-    ],
-    uk: [
-      "сидить",
-      "лежить",
-      "дивиться в камеру",
-      "дає лапу",
-      "стоїть",
-      "стоїть на 2 лапах",
-      "лежить на спинці",
-      "тільки силует",
-      "Юккі в комбінезоні",
-      "на фоні ялинки",
-      "на снігу"
-    ],
-    en: [
-      "sitting",
-      "lying down",
-      "looking at the camera",
-      "giving a paw",
-      "standing",
-      "standing on two paws",
-      "lying on the back",
-      "just silhouette",
-      "Yukki in a jumpsuit",
-      "in front of a Christmas tree",
-      "on the snow"
-    ]
-  };
+  // Цвета (20)
+  const colors = [
+    "#6B4226", "#A0522D", "#D2691E", "#8B4513", "#F4A460",
+    "#CD853F", "#DEB887", "#FFE4C4", "#A0522D", "#8B0000",
+    "#FF6347", "#FF4500", "#DA70D6", "#BA55D3", "#9932CC",
+    "#8A2BE2", "#9400D3", "#4B0082", "#6A5ACD", "#7B68EE"
+  ];
 
-  const factsBox = document.getElementById("factsBox");
   const barkBtn = document.getElementById("barkBtn");
   const meowBtn = document.getElementById("meowBtn");
-  const musicToggle = document.getElementById("musicToggle");
+  const hintBtn = document.getElementById("hintBtn");
+  const clearBtn = document.getElementById("clearBtn");
   const languageSelector = document.getElementById("languageSelector");
   const themeSelector = document.getElementById("themeSelector");
-  const toTopBtn = document.getElementById("toTopBtn");
-  const yukkiAvatar = document.getElementById("yukkiAvatar");
+  const musicToggle = document.getElementById("musicToggle");
+  const factsBox = document.getElementById("factsBox");
+  const thicknessLabel = document.getElementById("thicknessLabel");
 
-  const barkSound1 = document.getElementById("barkSound1");
-  const barkSound2 = document.getElementById("barkSound2");
+  // Инициализация фоток и подписей
+  function updateCaptions(lang) {
+    const caps = texts[lang].captions;
+    for (const id in caps) {
+      const el = document.getElementById(id);
+      if (el) el.textContent = caps[id];
+    }
+  }
+
+  // Обновить текст и кнопки по языку
+  function updateTexts(lang) {
+    document.getElementById("greeting").textContent = texts[lang].greeting;
+    updateCaptions(lang);
+    factsBox.textContent = randomFact(lang);
+
+    barkBtn.textContent = texts[lang].buttons.bark;
+    meowBtn.textContent = texts[lang].buttons.meow;
+    hintBtn.textContent = texts[lang].buttons.hint;
+    clearBtn.textContent = texts[lang].buttons.clear;
+
+    // Обновить темы
+    themeSelector.options[0].text = texts[lang].buttons.day;
+    themeSelector.options[1].text = texts[lang].buttons.night;
+    themeSelector.options[2].text = texts[lang].buttons.pink;
+
+    // Надпись для толщины
+    thicknessLabel.textContent = texts[lang].buttons.thicknessLabel;
+  }
+
+  function randomFact(lang) {
+    const arr = texts[lang].facts;
+    return arr[Math.floor(Math.random() * arr.length)];
+  }
+
+  // Показывать подсказку для рисования
+  hintBtn.addEventListener("click", () => {
+    const lang = languageSelector.value;
+    const hints = texts[lang].drawHints;
+    const hint = hints[Math.floor(Math.random() * hints.length)];
+    alert(hint);
+  });
+
+  // Кнопка стирания
+  clearBtn.addEventListener("click", () => {
+    strokes = [];
+    undoneStrokes = [];
+    redraw();
+  });
+
+  // Звуки
+  const barkSounds = [
+    document.getElementById("barkSound1"),
+    document.getElementById("barkSound2"),
+  ];
   const meowSound = document.getElementById("meowSound");
   const bgMusic = document.getElementById("bgMusic");
 
+  barkBtn.addEventListener("click", () => {
+    const snd = barkSounds[Math.floor(Math.random() * barkSounds.length)];
+    snd.currentTime = 0;
+    snd.play();
+  });
+  meowBtn.addEventListener("click", () => {
+    meowSound.currentTime = 0;
+    meowSound.play();
+  });
+  musicToggle.addEventListener("click", () => {
+    if (bgMusic.paused) {
+      bgMusic.play();
+      musicToggle.textContent = "🔈";
+    } else {
+      bgMusic.pause();
+      musicToggle.textContent = "🔊";
+    }
+  });
+
+  // Прокрутка вверх
+  const toTopBtn = document.getElementById("toTopBtn");
+  window.addEventListener("scroll", () => {
+    if (window.scrollY > 100) toTopBtn.classList.add("show");
+    else toTopBtn.classList.remove("show");
+  });
+  toTopBtn.addEventListener("click", () => {
+    window.scrollTo({ top: 0, behavior: "smooth" });
+  });
+
+  // Аватарка — гав-гав!
+  const yukkiAvatar = document.getElementById("yukkiAvatar");
+  yukkiAvatar.addEventListener("click", () => {
+    barkBtn.click();
+  });
+
+  // --- Рисовалка ---
   const canvas = document.getElementById("canvas");
   const ctx = canvas.getContext("2d");
 
-  // Рисовалка
   let drawing = false;
   let currentStroke = null;
   let strokes = [];
   let undoneStrokes = [];
 
-  let color = "#6B4226"; // коричневый
+  let color = colors[0];
   let thickness = 4;
 
-  // Цвета для палитры (20 штук)
-  const colors = [
-    "#6B4226", // коричневый (глаза)
-    "#000000", // чёрный
-    "#FFFFFF", // белый
-    "#FF0000", // красный
-    "#00FF00", // зелёный
-    "#0000FF", // синий
-    "#FFFF00", // жёлтый
-    "#FF69B4", // розовый
-    "#800080", // фиолетовый
-    "#00FFFF", // бирюзовый
-    "#FFA500", // оранжевый
-    "#A52A2A", // коричневый темный
-    "#FFC0CB", // светло-розовый
-    "#ADD8E6", // светло-голубой
-    "#008000", // тёмно-зелёный
-    "#FFD700", // золотой
-    "#4B0082", // индиго
-    "#D2691E", // шоколадный
-    "#808080", // серый
-    "#B22222"  // огненно-красный
-  ];
-
-  // Инициализация палитры
+  // Отрисовка цвета кнопок
   const colorPalette = document.getElementById("colorPalette");
   colors.forEach(c => {
-    const btn = document.createElement("div");
+    const btn = document.createElement("span");
     btn.className = "color-btn";
     btn.style.backgroundColor = c;
     btn.dataset.color = c;
     colorPalette.appendChild(btn);
   });
 
+  // Выделяем первый цвет по умолчанию
+  colorPalette.firstChild.classList.add("selected");
+
+  // Установка стиля кисти
   function setStrokeStyle() {
     ctx.strokeStyle = color;
     ctx.lineWidth = thickness;
@@ -463,6 +537,7 @@
     ctx.lineJoin = "round";
   }
 
+  // Перерисовать все штрихи
   function redraw() {
     ctx.clearRect(0, 0, canvas.width, canvas.height);
     for (const stroke of strokes) {
@@ -472,7 +547,7 @@
       ctx.lineCap = "round";
       ctx.lineJoin = "round";
       const pts = stroke.points;
-      ctx.moveTo(pts[0].x, pts[0].y);
+      if (pts.length > 0) ctx.moveTo(pts[0].x, pts[0].y);
       for (let i = 1; i < pts.length; i++) {
         ctx.lineTo(pts[i].x, pts[i].y);
       }
@@ -480,6 +555,7 @@
     }
   }
 
+  // События рисования
   canvas.addEventListener("mousedown", e => {
     drawing = true;
     currentStroke = {
@@ -494,7 +570,7 @@
     if (!drawing) return;
     currentStroke.points.push({ x: e.offsetX, y: e.offsetY });
     redraw();
-    // Рисуем текущую линию поверх
+    // Рисуем текущий штрих поверх
     ctx.beginPath();
     ctx.strokeStyle = currentStroke.color;
     ctx.lineWidth = currentStroke.thickness;
@@ -508,32 +584,37 @@
     ctx.stroke();
   });
 
-  function finishStroke() {
+  canvas.addEventListener("mouseup", e => {
     if (!drawing) return;
     drawing = false;
-    if (currentStroke) {
-      strokes.push(currentStroke);
-      currentStroke = null;
-      redraw();
+    strokes.push(currentStroke);
+    currentStroke = null;
+    redraw();
+  });
+
+  canvas.addEventListener("mouseleave", e => {
+    if (drawing) {
+      drawing = false;
+      if (currentStroke) {
+        strokes.push(currentStroke);
+        currentStroke = null;
+        redraw();
+      }
     }
-  }
+  });
 
-  canvas.addEventListener("mouseup", finishStroke);
-  canvas.addEventListener("mouseleave", finishStroke);
-
-  // Выбор цвета
+  // Цвета - выбор
   colorPalette.querySelectorAll(".color-btn").forEach(btn => {
     btn.addEventListener("click", () => {
       color = btn.dataset.color;
       setStrokeStyle();
+      // Выделение
       colorPalette.querySelectorAll(".color-btn").forEach(b => b.classList.remove("selected"));
       btn.classList.add("selected");
     });
   });
-  // Выделить первый цвет по умолчанию
-  colorPalette.querySelector(".color-btn").classList.add("selected");
 
-  // Выбор толщины
+  // Толщина кисти
   document.getElementById("thicknessSelect").addEventListener("change", e => {
     thickness = +e.target.value;
     setStrokeStyle();
@@ -552,72 +633,17 @@
     redraw();
   });
 
+  // Инициализация при загрузке
   setStrokeStyle();
-
-  // Кнопка Наверх
-  window.addEventListener("scroll", () => {
-    if (window.scrollY > 100) toTopBtn.classList.add("show");
-    else toTopBtn.classList.remove("show");
-  });
-  toTopBtn.addEventListener("click", () => {
-    window.scrollTo({ top: 0, behavior: "smooth" });
-  });
-
-  // Клик по аватару — лай
-  yukkiAvatar.addEventListener("click", () => {
-    barkBtn.click();
-  });
-
-  // Звуки
-  barkBtn.addEventListener("click", () => {
-    const sound = Math.random() < 0.5 ? barkSound1 : barkSound2;
-    sound.currentTime = 0;
-    sound.play();
-  });
-  meowBtn.addEventListener("click", () => {
-    meowSound.currentTime = 0;
-    meowSound.play();
-  });
-
-  // Музыка
-  musicToggle.addEventListener("click", () => {
-    if (bgMusic.paused) {
-      bgMusic.play();
-      musicToggle.textContent = "🔈";
-    } else {
-      bgMusic.pause();
-      musicToggle.textContent = "🔊";
-    }
-  });
-
-  // Переключение языка и текста
-  function updateTexts(lang) {
-    const t = texts[lang];
-    document.getElementById("greeting").textContent = t.greeting;
-    for (const [id, txt] of Object.entries(t.captions)) {
-      const el = document.getElementById(id);
-      if (el) el.textContent = txt;
-    }
-    factsBox.textContent = randomFact(lang);
-    barkBtn.textContent = t.buttons.bark;
-    meowBtn.textContent = t.buttons.meow;
-    themeSelector.options[0].text = t.buttons.day;
-    themeSelector.options[1].text = t.buttons.night;
-    themeSelector.options[2].text = t.buttons.pink;
-  }
-
-  function randomFact(lang) {
-    const arr = texts[lang].facts;
-    return arr[Math.floor(Math.random() * arr.length)];
-  }
-
-  languageSelector.addEventListener("change", e => {
-    updateTexts(e.target.value);
-  });
-
   updateTexts(languageSelector.value);
 
-  // Темы
+  // Меняем язык
+  languageSelector.addEventListener("change", e => {
+    updateTexts(e.target.value);
+    factsBox.textContent = randomFact(e.target.value);
+  });
+
+  // Смена темы — (пример, просто меняет фон)
   themeSelector.addEventListener("change", e => {
     const val = e.target.value;
     if (val === "day") {
@@ -625,18 +651,12 @@
       document.body.style.color = "#333";
     } else if (val === "night") {
       document.body.style.background = "#1a1a2e";
-      document.body.style.color = "#eee";
+      document.body.style.color = "#ddd";
     } else if (val === "pink") {
-      document.body.style.background = "#f7c6d0";
-      document.body.style.color = "#601028";
+      document.body.style.background = "#f8c8dc";
+      document.body.style.color = "#333";
     }
   });
-
-  // Показываем новый факт каждые 15 секунд
-  setInterval(() => {
-    factsBox.textContent = randomFact(languageSelector.value);
-  }, 15000);
-
 </script>
 
 </body>
