--- a/index.html
+++ b/index.html
@@ -396,11 +396,24 @@
 
   // Цвета (20)
   const colors = [
-    "#6B4226", "#A0522D", "#D2691E", "#8B4513", "#F4A460",
-    "#CD853F", "#DEB887", "#FFE4C4", "#A0522D", "#8B0000",
-    "#FF6347", "#FF4500", "#DA70D6", "#BA55D3", "#9932CC",
-    "#8A2BE2", "#9400D3", "#4B0082", "#6A5ACD", "#7B68EE"
-  ];
+  // коричневые
+  "#6B4226", "#A0522D", "#D2691E", "#8B4513", "#F4A460",
+  "#CD853F", "#DEB887", "#FFE4C4",
+  // красные
+  "#8B0000", "#FF6347", "#FF4500", "#DC143C",
+  // синие
+  "#00008B", "#4169E1", "#4682B4", "#5F9EA0",
+  // зелёные
+  "#2E8B57", "#3CB371", "#66CDAA", "#8FBC8F",
+  // фиолетовые
+  "#800080", "#8A2BE2", "#9400D3",
+  // жёлтые и оранжевые
+  "#FFD700", "#FFA500", "#F0E68C",
+  // розовые и пастельные
+  "#FF69B4", "#FFB6C1", "#E6E6FA", "#D8BFD8"
+];
+
+  
 
   const barkBtn = document.getElementById("barkBtn");
   const meowBtn = document.getElementById("meowBtn");
