--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+стой стой стой. у меня есть код,а дальше скажи что и куда вставить:
+
 <!DOCTYPE html>
 <html lang="ru">
 <head>
@@ -715,198 +717,7 @@
       document.body.style.background = "#f8c8dc";
       document.body.style.color = "#333";
     }
-<!-- ===== Миниигра: Кликер по Юкки ===== -->
-<style>
-  /* Рукописный шрифт */
-  @import url('https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap');
-
-  #clickerGame {
-    max-width: 700px;
-    margin: 3rem auto 2rem;
-    padding: 1rem;
-    background: #f3e6ff; /* светло-фиолетовый фон */
-    border: 3px solid #800080;
-    border-radius: 15px;
-    text-align: center;
-    font-family: 'Patrick Hand', cursive, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: #4b004b;
-    user-select: none;
-  }
-
-  #clickerGame.night {
-    background: #3c0a54;
-    color: #d3a3f9;
-    border-color: #d78cff;
-  }
-
-  #clickerGame .title {
-    font-size: 2rem;
-    margin-bottom: 0.6rem;
-  }
-
-  #clickerGame .avatar {
-    width: 180px;
-    border-radius: 50%;
-    border: 4px solid #d78cff;
-    box-shadow: 0 0 20px #a64ca6;
-    cursor: pointer;
-    transition: transform 0.3s ease;
-    margin-bottom: 1rem;
-  }
-  #clickerGame .avatar:hover {
-    transform: scale(1.05) rotate(5deg);
-  }
-
-  #clickerGame .treatsCount {
-    font-size: 1.5rem;
-    margin-bottom: 10px;
-    font-weight: bold;
-  }
-
-  #clickerGame #clickEffectContainer {
-    position: relative;
-    height: 40px;
-    overflow: visible;
-    margin-bottom: 10px;
-  }
-
-  .treat-effect {
-    position: absolute;
-    font-size: 1.2rem;
-    color: #ff6347;
-    user-select: none;
-    animation: floatUp 1s ease-out forwards;
-    pointer-events: none;
-    font-weight: bold;
-    text-shadow: 0 0 4px #ff4500;
-    white-space: nowrap;
-  }
-
-  @keyframes floatUp {
-    0% {
-      opacity: 1;
-      transform: translateY(0) scale(1);
-    }
-    100% {
-      opacity: 0;
-      transform: translateY(-50px) scale(1.5);
-    }
-  }
-
-  /* Кнопка сброса */
-  #clickerGame button {
-    background: #800080;
-    color: #fff;
-    border: none;
-    padding: 8px 18px;
-    border-radius: 22px;
-    font-size: 1rem;
-    cursor: pointer;
-    box-shadow: 0 3px 8px rgba(128, 0, 128, 0.7);
-    transition: background 0.3s ease;
-    font-family: inherit;
-  }
-  #clickerGame button:hover {
-    background: #a64ca6;
-  }
-</style>
-
-<div id="clickerGame">
-  <div class="title">Кликер по Юкки 🐶</div>
-  <img src="Yukki_common.png" alt="Юкки" class="avatar" title="Кликни на Юкки!" />
-  <div class="treatsCount" aria-live="polite">Вкусняшки: <span id="treatsCount">0</span> 🍗</div>
-  <div id="clickEffectContainer"></div>
-  <button id="resetBtn" title="Сбросить счётчик">Сбросить</button>
-</div>
-
-<script>
-  (function(){
-    const clickerGame = document.getElementById("clickerGame");
-    const avatar = clickerGame.querySelector(".avatar");
-    const treatsCountEl = document.getElementById("treatsCount");
-    const clickEffectContainer = document.getElementById("clickEffectContainer");
-    const resetBtn = document.getElementById("resetBtn");
-
-    let treats = 0;
-    const treatPerClick = 1;
-
-    function addTreats(x, clientX, clientY) {
-      treats += x;
-      treatsCountEl.textContent = treats;
-
-      const rect = clickEffectContainer.getBoundingClientRect();
-      const effect = document.createElement("div");
-      effect.className = "treat-effect";
-      effect.textContent = `+${x}`;
-      // Позиция эффекта относительно контейнера
-      const left = clientX - rect.left;
-      const top = clientY - rect.top;
-      effect.style.left = `${left}px`;
-      effect.style.top = `${top}px`;
-
-      clickEffectContainer.appendChild(effect);
-
-      effect.addEventListener("animationend", () => effect.remove());
-    }
-
-    avatar.addEventListener("click", e => {
-      addTreats(treatPerClick, e.clientX, e.clientY);
-    });
-
-    resetBtn.addEventListener("click", () => {
-      treats = 0;
-      treatsCountEl.textContent = treats;
-    });
-
-    // Поддержка темы (только фиолетовая и ночь для примера)
-    function updateTheme(theme) {
-      if(theme === "night") {
-        clickerGame.classList.add("night");
-      } else {
-        clickerGame.classList.remove("night");
-      }
-      // Можно расширить для "фиолетовой" темы, если нужно
-    }
-
-    // Поддержка языка (простой пример)
-    function updateLanguage(lang) {
-      const titles = {
-        ru: "Кликер по Юкки 🐶",
-        uk: "Кліккер по Юккі 🐶",
-        en: "Yukki Clicker 🐶"
-      };
-      clickerGame.querySelector(".title").textContent = titles[lang] || titles.ru;
-      resetBtn.textContent = {
-        ru: "Сбросить",
-        uk: "Скинути",
-        en: "Reset"
-      }[lang] || "Сбросить";
-      clickerGame.querySelector(".treatsCount").innerHTML = {
-        ru: 'Вкусняшки: <span id="treatsCount">'+treats+'</span> 🍗',
-        uk: 'Смаколики: <span id="treatsCount">'+treats+'</span> 🍗',
-        en: 'Treats: <span id="treatsCount">'+treats+'</span> 🍗'
-      }[lang] || 'Вкусняшки: <span id="treatsCount">'+treats+'</span> 🍗';
-    }
-
-    // --- Слушаем события темы и языка из глобального селектора, если они есть ---
-    const globalLangSelector = document.getElementById("languageSelector");
-    const globalThemeSelector = document.getElementById("themeSelector");
-
-    if(globalLangSelector){
-      globalLangSelector.addEventListener("change", e => {
-        updateLanguage(e.target.value);
-      });
-      // инициализация
-      updateLanguage(globalLangSelector.value);
-    }
-    if(globalThemeSelector){
-      globalThemeSelector.addEventListener("change", e => {
-        updateTheme(e.target.value);
-      });
-      // инициализация
-      updateTheme(globalThemeSelector.value);
-    }
-  })();
+  });
 </script>
 
 </body>
